lecture_09(ingress)/03.cafe-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  name: coffee-ingress
  namespace: default
spec:
  rules:
  - host: coffee.openmsa.monster
    http:
      paths:
      - backend:
          service:
            name: coffee-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - coffee.openmsa.monster
    secretName: openmsa
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  name: tea-ingress
  namespace: default
spec:
  rules:
  - host: tea.openmsa.monster
    http:
      paths:
      - backend:
          service:
            name: tea-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - tea.openmsa.monster
    secretName: openmsa
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  name: juice-ingress
  namespace: default
spec:
  rules:
  - host: www.openmsa.monster
    http:
      paths:
      - backend:
          service:
            name: juice-svc
            port:
              number: 80
        path: /juice
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - www.openmsa.monster
    secretName: openmsa
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  name: water-ingress
  namespace: default
spec:
  rules:
  - host: www.openmsa.monster
    http:
      paths:
      - backend:
          service:
            name: water-svc
            port:
              number: 80
        path: /water
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - www.openmsa.monster
    secretName: openmsa
